time working and fixed layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@ body {
 	background-color: rgba(255, 237, 21, 0.85);
 	/*R: 255 G: 237 B: 21*/
 	text-align: center;
-	height: 90vh;
-	width: 75%;
+	/*height: 90vh;
+	width: 75%;*/
 	margin-top: 40px;
 	padding: 40px;
 	color: #C43417;
